Closed Bug 87033 Opened 23 years ago Closed 23 years ago

Unable to start installer/uninstaller when having "Quick Launch" option on

Categories

(SeaMonkey :: Installer, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.3

People

(Reporter: bugzilla, Assigned: ssu0262)

References

Details

(Whiteboard: [PDT+] have patch; have r=dbragg, sr=mscott)

Attachments

(2 files)

If you enable the turbo mode aka Quick Launch it's impossible to start the 
installer. I'm getting "Mozilla is already running!"
Blocks: 75599
Status: NEW → ASSIGNED
Also with the uninstaller.  On Windows 98SE, the only way to uninstall Mozilla
once it's been run with quick start is to ctrl-alt-del and manually kill
Mozilla.  As an aside, when quick launch is running, Mozilla is always listed in
the task list as "Not responding".  This is probably a separate bug.
Summary: Unable to start installer when having "Quick Launch" option on → Unable to start installer/uninstaller when having "Quick Launch" option on
setting keywords and target milestones
Keywords: nsbeta1, nsBranch
Target Milestone: --- → mozilla0.9.3
Cathleen, Bill Law (before he left for his sabbatical) indicated that sending a 
WM_QUIT message to the browser window was probably not going to work.  I just 
verified that it does not work.  We need some kind of command line (something 
like -quit or -quit_turbo) option to quit the browser.  Do you know if that's 
what Blake is working on?
oh, that sucks...  :-(

how about -kill?  I don't know if that works... I think blake might be looking 
at that for the sys tray icon feature.
Whiteboard: have patch; seeking r=,sr=
marking PDT+ per pdt
Whiteboard: have patch; seeking r=,sr= → [PDT+] have patch; seeking r=,sr=
r=dbragg
Whiteboard: [PDT+] have patch; seeking r=,sr= → [PDT+] have patch; have r=dbragg, seeking sr=
sr=mscott
yay.  patches checked in on both trunk and branch.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: [PDT+] have patch; have r=dbragg, seeking sr= → [PDT+] have patch; have r=dbragg, sr=mscott
verified on branch build 200107104 for both Mozilla/N6
adding vtrunk (reminder to verify on trunk)
Keywords: vtrunk
verified on trunk build 2001081603
Status: RESOLVED → VERIFIED
Keywords: vtrunk
No longer blocks: 75599
Blocks: 75599
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: