fixing bug 87033 - Unable to start installer/uninstaller when having Quick Launch option on.  r=dbragg, sr=mscott.  affects only windows platforms